--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,4 +25,13 @@
         android:textAllCaps="false"
         android:onClick="onDebug"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:text="show test"
+        android:textAllCaps="false"
+        android:onClick="onShow"/>
+
 </LinearLayout>
